# spatial_indexing

./: .gitignore  CMakeLists.txt  README.md  config.toml  run_experiments.py
include/: benchmark_runner.h  rtree_helpers.h  sware_benchmark.h  tree_setup.h  workload_generator.h
scripts/: examine_insert_csv.ipynb
scripts/.ipynb_checkpoints/: examine_insert_csv-checkpoint.ipynb
src/: benchmark_runner.cpp  run_rtree.cpp  sware_benchmark.cpp  tree_setup.cpp  workload_generator.cpp
